--- a/flexclient/dag/Components/PopupWindow.mxml
+++ b/flexclient/dag/Components/PopupWindow.mxml
@@ -6,6 +6,7 @@
 	 	<![CDATA[
 	 		import mx.formatters.DateFormatter;
 	 		import mx.controls.DateField;
+	 		import mx.controls.DateChooser
 	 		import mx.collections.ArrayCollection;
 	 		import mx.controls.TextInput;
             import mx.managers.PopUpManager;
@@ -96,9 +97,6 @@
 	 	    private var secondNodeList : ArrayCollection = null; 
 	 	    private var existingPickerLabel : Label = null; 
 	 	    
-	 	    //public var firstDAGNode : DAGNode =  null;
-	 	    //public var secondDAGNode : DAGNode = null;
-	 	    
 	 	   public function removeMe():void 
 	 	   {
                 PopUpManager.removePopUp(this);
@@ -187,22 +185,19 @@
              }
              
              //Setting the first selected DAG Nodes Properties
-             //customFormulaNode.setFirstNodeName(firstDAGNode.nodeName);
              customFormulaNode.setFirstNodeName(firstEntityName); 
-             //customFormulaNode.setFirstNodeExpId(firstDAGNode.expressionId);
              customFormulaNode.setFirstNodeExpId(firstEntityExpId); 
               
             //Setting the second selected DAG Nodes Properties
-           // customFormulaNode.setSecondNodeName(secondDAGNode.nodeName);
             customFormulaNode.setSecondNodeName(secondEntityName);
-           // customFormulaNode.setSecondNodeExpId(secondDAGNode.expressionId);
-           customFormulaNode.setSecondNodeExpId(secondEntityExpId);
+            customFormulaNode.setSecondNodeExpId(secondEntityExpId);
             
-            //var customNodeName : String = firstDAGNode.nodeNumber + "_" + secondDAGNode.nodeNumber; 
             customFormulaNode.name = nodeName;
+            
+            //Setting custom column Name
+            customFormulaNode.setCustomColumnName(customColumnName.text);
             parentApplication.customFormulaString = customFormulaString;
              
-           // this.parentApplication.rpcService.removeEventListener(ResultEvent.RESULT, resultHandler);
             this.parentApplication.rpcService.addEventListener(FaultEvent.FAULT, faultHandler);
 
             if(submitButton.label == "OK")
@@ -509,7 +504,11 @@
         <mx:ComboBox id="cb5" name="timeIntervalCb" dataProvider="{myArray5}" width="100"  borderThickness="0" borderColor="blue" prompt="--Select--" dropdownFactory="{myDropdownFactory}" creationComplete="initClassFactory()"/>
        <!-- <mx:Panel  id="p1" height="20" width="100" /> -->
       </mx:HBox> 	 
-	 
+	 <mx:HBox x="20">
+         <mx:Label id="columnLabel" width="330" text="Please Enter Column Name To Be Displayed in Results:"/>
+         <mx:TextInput id="customColumnName" width="300" restrict="A-Z a-z" borderColor="blue"/>
+	 </mx:HBox>
+	  
 	  <mx:HBox x="20" y="50">
 	      <mx:Button id="submitButton" label="{buttonLabel}" click="submitData();"/>
           <mx:Button id="cancelButton" label="Cancel" click="removeMe();"/>  
