--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -269,12 +269,6 @@ A.view:hover{
 	border-right:1px solid #bfdcf3;
 	border-left:1px solid #bfdcf3;
 }
-.cpborder {
-	border-bottom:1px solid #999999;
-	border-top:1px solid #999999;
-	border-right:1px solid #999999;
-	border-left:1px solid #999999;
-}
 
 .tdPartition {
 	border-bottom:2px solid #ffffff;
@@ -287,6 +281,7 @@ A.view:hover{
 
 .cp_tabbg {
 	border-bottom:1px solid #61a1e3;
+	width:100%;
 }
 
 .cp_tabtable {
@@ -475,9 +470,9 @@ div.autocomplete {
 	.formFieldSized19{ /* for the autocomplete tag */
 	font-family:verdana;
 	border:1px solid #6E81A6; 
-  font-size:11px;
+	  font-size:11px;
 	width:19em;
-}
+	}
 
 	.formFieldSizedTime{ /* for the form elements themselves and with a constant width (on elements) */
 	font-family:verdana;
