Delete Functionality is suspended temporarily ~ Baljeet
SVN-Revision: 14458

--- a/flexclient/dag/Components/DAGNode.mxml
+++ b/flexclient/dag/Components/DAGNode.mxml
@@ -374,7 +374,8 @@
 		{
 			if(event.label == DAGConstants.DELETE)
 			{
-				deleteNode();
+				Alert.show("Delete Path functionality is Temporarily Suspended. Please Redefine the Query");
+				//deleteNode();
 			}
 			if(event.label ==DAGConstants.EDIT)
 			{
